# routes/index.js
@@ -1,16 +1,15 @@
 const express = require('express');
 const router = express.Router();
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
-
-
 router.use('/user', require('./user'));
-router.use('/medical-ward', require('./medical_ward'));
+router.use('/medicalward', require('./medical_ward'));
 
-router.ge('/login', passport.authenticate('github'), (req, res) => {});
+router.get('/login', passport.authenticate('github'), (req, rest) => {});
 
 router.get('/logout', function (req, res, next) {
-    register.logout(function(err) {
+    req.logout(function(err) {
         if (err) { return next(err); }
         res.redirect('/');
     });
