# server.js
@@ -1,73 +1,75 @@
 const express = require('express');
 const bodyParser = require('body-parser');
-const mongodb = require('./db/connection');
-const passport = require('password');
+const dotenv = require('dotenv').config();
+const mongoDB = require('./db/connection');
+const passport = require('passport');
 const session = require('express-session');
 const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
 const port = process.env.PORT || 3002;
 const app = express();
 
 app
-  .use(bodyParser.json())
-  .use(session({
-    secret:"secret",
+   .use(bodyParser.json())
+   .use(session({
+    secret: 'secret',
     resave: false,
-    saveUninitialized: true ,
-  }))
-  // basic express session ({...}) initialization.
-  .use(passport.initialize())
-  // it passport on every route call
-  .use(passport.session())
-  // allow passport to use "express-session".
-  .use((req, res, next) => {
-    res.setHeader('Access-Control-Allow-Origin', '*');
+    saveUninitialized: true,
+   }))
+   .use(passport.initialize())
+   .use((req, res, next) => {
+    res.setHeader("Accss-Controll-Allow-Origin", "*");
     res.setHeader(
-        'Access-Control-Allow-Headers',
-        'Origin, X-Request-With, content-Type, Accept, Z-Key'
+        "Access-Control-Allow-Headers",
+        "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Autorization"
     );
-    res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
+    res.setHeader(
+        "Access-Control-Allow-Methods",
+        "POST, GET, PUT, PATCH, OPTIONS, DELETE"
+    );
     next();
-  })
-  .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
-  .use(cors({ origin: '*'}))
-  .use('/', require('./routes'));
+   })
+   .use(cors({ methods: ['GET','POST','DELETE','UPDATE','PUT','PATCH']}))
+   .use(cors({ origin: '*'}))
+   .use("/", require("./routes/index.js"));
 
-  passport.use(new GitHubStrategy({
+passport.use(new GitHubStrategy( {
     clientID: process.env.GITHUB_CLIENT_ID,
     clientSecret: process.env.GITHUB_CLIENT_SECRET,
-    callbackURL: process.env.CALLBACK_URL
-  },
-  function(accessToken, refreshToken, profile, done) {
-    //User.find)rCreate({ githubId: profile.id }, functionn{err, user} {
-      return done(null, profile);
-    //})
-  }
-))
-  
+    callbackURL: process.env.callbackURL
+},
+function(accessToken, refreshToken, profile, done) {
+    return done(null, profile);
+}  
+));
+
 passport.serializeUser((user, done) => {
-  done(null, user);
+    done(null, user);
 });
-passport.deserializeUser((user, done) => {
-  done(null, user);
+passport.deserializeUser(() => {
+    done(null, user);
 });
+
+app.get('/', (req, res) => {
+    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")
+});
+// app.get('/', (req, res) => {
+//     res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.firstName} ${req.session.user.lastName}` : "Logged Out");
+// });
 
 app.get('/github/callback', passport.authenticate('github', {
-  failureRedirect: '/api-docs', session: false
-}),
-(req, res) => {
-  req.session.user = req.user;
-  res.redirect('/');
-});
+    failureRedirect: '/api-docs', session: false}
+    ), (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    });
 
-process.on('uncaughtException', (err, origin) => {
-    console.log(process.stderr.fd, `Caught exception: ${err}\n` + `Exception origin: ${origin}`);
-  });
-mongodb.initDb((err) => {
+mongoDB.initDb((err, mongoDB) => {
     if (err) {
         console.log(err);
     } else {
         app.listen(port);
-        console.log(`Connected to DB and listening on ${port}`);
+        console.log(`app started on Port ${port}`);
     }
 });
